--- a/src/scss/_fonts.sass
+++ b/src/scss/_fonts.sass
@@ -2,3 +2,4 @@
 +font-face("RobotoLight", "/fonts/RobotoLight/RobotoLight")
 +font-face("RobotoBold", "/fonts/RobotoBold/RobotoBold")
 +font-face("RobotoBlack", "/fonts/RobotoBlack/RobotoBlack")
++font-face("Font Awesome 5 Free", "/fonts/fa-regular-400")
