--- a/src/scss/vendor.sass
+++ b/src/scss/vendor.sass
@@ -11,8 +11,7 @@
 /* Заменил зависимости для компиляции в vendor.css без сервера*/
 /* bootstrap вшивается в css, остальные подключаются внешне*/
 @import "../assets/bootstrap-sass-3.4.1/assets/stylesheets/_bootstrap.scss"
-
-// @import "../node_modules/@fortawesome/fontawesome-free/css/all.css"
+@import "../assets/fontawesome-free-5.12.0-web/css/all.css"
 // @import "~eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css"
 // @import "../src/node_modules/select2/dist/css/select2.css"
 // @import "~select2-bootstrap-theme/dist/select2-bootstrap.css"
