--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -8,12 +8,17 @@ html(class='no-js', lang='ru')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href='/favicon.ico', rel='shortcut icon')
-    link(rel='stylesheet', href='css/vendor.css')
-    base(href='https://new.razvitum.ru')
+    link(rel='stylesheet', href='/css/all.min.css')
+    link(rel='stylesheet', href='/css/vendor.css')
+    //- base(href='https://new.razvitum.ru')
     block head
       link(rel='stylesheet', href='css/front.css')
       //- script.
       //-   document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     block meta
       title Home
 
@@ -29,7 +34,8 @@ html(class='no-js', lang='ru')
     include _footer.pug
 
     block page-bottom
-      script(src='js/vendors.min.js')
-      script(src='js/bootstrap.js')
-      script(src='js/vendors.min.js')
-      script(src='js/script.min.js')
+      script(src='/js/jquery-3.4.1.min.js')
+      script(src='/js/bootstrap.js')
+      script(src='/js/all.js')
+      script(src='/js/vendors.min.js')
+      //- script(src='/js/script.min.js')
