--- a/src/scss/_vars.sass
+++ b/src/scss/_vars.sass
@@ -14,6 +14,7 @@ $orang: #f18425
 $orange: #fecf73
 $active-color: #a3d3e5
 $info: #f4fdfd
+$lightgray: #acabab
 $graybg: #f2f2f2
 $gray: #999999
 $lgray: rgb(204, 204, 204)
@@ -37,6 +38,6 @@ $border: #dddddd
     position: absolute
     display: block
     width: $x
-    height: $y    
+    height: $y
     left: 0
     top: 0
