--- a/src/scss/_fonts.sass
+++ b/src/scss/_fonts.sass
@@ -3,3 +3,4 @@
 +font-face("RobotoBold", "/fonts/RobotoBold/RobotoBold")
 +font-face("RobotoBlack", "/fonts/RobotoBlack/RobotoBlack")
 +font-face("Font Awesome 5 Free", "/fonts/fa-regular-400")
+// +font-face("Glyphicons Halflings", "/fonts/glyphicons-halflings-regular")
