--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -14,8 +14,12 @@
         background-position: 0% 82%
 
   &__title
+    font-size: 48px
+    font-weight: 700
     color: $orange
   &__text
+    font-size: 48px
+    font-weight: 400
     color: #fff
 
   &__statistic
