--- a/src/scss/_main.sass
+++ b/src/scss/_main.sass
@@ -7,7 +7,7 @@
 header
   .s-header
     padding: 40px 0
-    background-color: #ffffff
+    background-color: #fff
 
     .logo
       img
@@ -72,7 +72,7 @@ header
 
           &:hover
             i
-              color: #ffffff
+              color: #fff
 
         .btn-user
           position: relative
@@ -133,7 +133,7 @@ header
   .navbar-default .navbar-nav > .active > a
     background-color: transparent
     background-image: none
-    color: #ffffff
+    color: #fff
     position: relative
 
     &::after
@@ -147,7 +147,7 @@ header
     //   background-color: $active-color
 
   .navbar.navbar-default
-    background-color: #ffffff
+    background-color: #fff
     border-bottom: 1px solid $accent
 
   .navbar
@@ -167,11 +167,11 @@ header
     background-color: $accent
 
     .navbar-nav > li > a
-      padding: 30px 30px 30px 0
-      font-size: 14px
-      line-height: 14px
+      padding: 30px 30px 28px 0
+      font-size: 0.875em
+      line-height: 1em
       text-align: left
-      color: #ffffff
+      color: #fff
       text-transform: uppercase
       position: relative
 
@@ -201,7 +201,7 @@ header
 
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover
     background-color: transparent !important
-    color: #ffffff
+    color: #fff
 
   .nav .open > a, .nav .open > a:focus, .nav .open > a:hover
     background-color: transparent !important
@@ -219,7 +219,7 @@ header
   .buttom-menu
     .nav > li > a:focus, .nav > li > a:hover, .nav > li > a:active
       background-color: $active-color !important
-      color: #ffffff !important
+      color: #fff !important
 
 // Стили для слайдера на Главной странице
 .s-carousel
@@ -289,7 +289,7 @@ header
 .s-blue
   width: 100%
   background-color: $accent
-  color: #ffffff
+  color: #fff
   padding: 40px 0
   text-align: center
 
@@ -428,7 +428,7 @@ header
 
       .flipper-back
         background-color: $accent
-        color: #ffffff
+        color: #fff
 
     .item-3
       grid-area: item-3
@@ -459,14 +459,14 @@ header
 
       .flipper-back
         background-color: $accent
-        color: #ffffff
+        color: #fff
 
     .item-8
       grid-area: item-8
 
       .flipper-back
         background-color: $accent
-        color: #ffffff
+        color: #fff
 
     .item-9
       grid-area: item-9
@@ -485,7 +485,7 @@ header
 
       .flipper-back
         background-color: $accent
-        color: #ffffff
+        color: #fff
 
     .item-12
       grid-area: item-12
@@ -496,7 +496,7 @@ header
     span
       font-size: 40px
       display: block
-      color: #ffffff
+      color: #fff
       font-weight: 500
 
     .item
@@ -521,7 +521,7 @@ header
         height: 100%
         transform-style: preserve-3d
         transition: all 1.1s cubic-bezier(0.175, 0.885, 0.32, 1.275)
-        border: 2px solid #ffffff
+        border: 2px solid #fff
 
         .flipper-back
           position: relative
@@ -560,11 +560,11 @@ footer
   .footer_nav-header
     a
       text-transform: uppercase
-      color: #ffffff
+      color: #fff
       text-decoration: none
 
     p
-      color: #ffffff
+      color: #fff
 
   .footer_nav
     i
@@ -584,7 +584,7 @@ footer
           color: #cccccc
           text-decoration: none
           &:hover
-            color: #ffffff
+            color: #fff
 
   .up-arrow
     display: block
@@ -596,15 +596,15 @@ footer
     transition: opacity 0.3s
 
   .footer-title
-    color: #ffffff
+    color: #fff
 
   .footer-bottom
     padding-top: 50px
-    color: #ffffff
+    color: #fff
 
     .footer-title
       font-weight: 700
-      color: #ffffff
+      color: #fff
 
     .phone
       font-size: 34px
@@ -615,10 +615,10 @@ footer
 
       a
         text-decoration: none
-        color: #ffffff
+        color: #fff
 
     .call a
-      color: #ffffff
+      color: #fff
 
     /*line-height: 30%;
 
@@ -648,7 +648,7 @@ footer
           margin-right: 0.7em
 
     .footer-links ul li a
-      color: #ffffff
+      color: #fff
 
     .usage
       font-size: 11px
@@ -885,7 +885,7 @@ ul.sorting-pills li
         height: 40px
         position: absolute
         display: block
-        color: #ffffff
+        color: #fff
         top: 15px
         right: 15px
         font-size: 12px
@@ -963,7 +963,7 @@ ul.sorting-pills li
 .jumbotron
   &.program-cover
     position: relative
-    color: #FFFFFF
+    color: #fff
     margin-bottom: 0
     overflow: hidden
 
@@ -1214,7 +1214,7 @@ ul.sorting-pills li
 
       &:hover
         background-color: $active-color
-        color: #ffffff
+        color: #fff
 
       span.badge
         width: 22px
@@ -1234,10 +1234,10 @@ ul.sorting-pills li
       background-color: $active-color
 
       span.badge
-        color: #ffffff
+        color: #fff
 
       &:hover
-        color: #ffffff
+        color: #fff
 
 // Стили страницы с быстрой регистрацией пользователя
 .quick-registration
@@ -1693,7 +1693,7 @@ ul.sorting-pills li
         display: inline-block
 
 .s-beruza
-  color: #ffffff
+  color: #fff
 
   .p1
     font-size: 30px
@@ -1886,7 +1886,7 @@ ul.sorting-pills li
       position: relative
       padding: 25px
       overflow: hidden
-      color: #ffffff
+      color: #fff
 
       h4
         text-transform: uppercase
@@ -1993,7 +1993,7 @@ ul.sorting-pills li
 
   .progress
     height: 40px
-    background-color: #ffffff
+    background-color: #fff
     border: 1px solid $border
 
     .progress-bar
@@ -2072,16 +2072,16 @@ ul.sorting-pills li
 
     .head-table
       background-color: $accent
-      color: #ffffff
+      color: #fff
       font-weight: 700
       padding: 10px 15px
       border: none
 
       .fa-question-circle
-        color: #ffffff
+        color: #fff
 
     .panel-heading
-      background-color: #ffffff
+      background-color: #fff
 
     .panel-title
       font-size: 14px !important
@@ -2279,7 +2279,7 @@ ul.sorting-pills li
         justify-content: center
         width: 40px
         height: 40px
-        color: #ffffff
+        color: #fff
         font-size: 22px
         font-family: $default-font
         font-weight: 600
@@ -2497,7 +2497,7 @@ ul.sorting-pills li
     background-repeat: no-repeat
     background-size: cover
     background-position: center
-    color: #ffffff
+    color: #fff
     padding: 40px
     width: 100%
     margin: 0 auto
@@ -2538,12 +2538,12 @@ ul.sorting-pills li
       width: 100%
 
     .summa
-      color: #ffffff
+      color: #fff
       display: block
       margin-top: 10px
       font-size: 30px
       padding: 10px
-      border-bottom: 1px solid #ffffff
+      border-bottom: 1px solid #fff
 
   .seminar-options
     border-bottom: 1px solid $border
@@ -2636,14 +2636,14 @@ ul.sorting-pills li
   border-collapse: collapse
   overflow: hidden
 
-  .panel-footer
-    border-bottom-left-radius: inherit
-    border-bottom-right-radius: inherit
-    padding-bottom: 15px
+  // .panel-footer
+  //   border-bottom-left-radius: inherit
+  //   border-bottom-right-radius: inherit
+  //   padding-bottom: 15px
 
   .file-wrap
     label
-      background-color: #ffffff
+      background-color: #fff
 
   textarea
     padding: 15px 20px
@@ -2651,12 +2651,12 @@ ul.sorting-pills li
     min-width: 100%
     min-height: 200px
     max-height: 400px
-    background-color: #ffffff
+    background-color: #fff
     border-radius: 20px
     border: 2px solid $border
 
   input[type="text"]
-    background-color: #ffffff
+    background-color: #fff
 
 // Стили для страниц СЕМИНАРА
 .menu-block
@@ -2665,7 +2665,7 @@ ul.sorting-pills li
   justify-content: space-between
   align-items: center
   flex-wrap: wrap
-  color: #ffffff
+  color: #fff
   line-height: 16px
   margin-top: 8px
   margin-bottom: 8px
@@ -2682,7 +2682,7 @@ ul.sorting-pills li
       a
         display: flex
         align-items: center
-        color: #ffffff
+        color: #fff
 
         &:hover
           text-decoration: none
@@ -2718,7 +2718,7 @@ ul.sorting-pills li
     background: rgba(#000, 0.4)
 
   h3
-    color: #ffffff
+    color: #fff
     font-weight: 900
     font-size: 32px
     font-family: $black-font
@@ -2744,7 +2744,7 @@ ul.sorting-pills li
     text-transform: uppercase
     letter-spacing: 2px
     font-family: $bold-font
-    color: #ffffff
+    color: #fff
 
     span
       font-weight: 900
@@ -2757,7 +2757,7 @@ ul.sorting-pills li
     color: $accent
 
     &:hover
-      color: #FFFFFF
+      color: #fff
 
   .map-wrap
     position: absolute
@@ -2771,13 +2771,13 @@ ul.sorting-pills li
       opacity: 0.3
 
   .seminar-bottom-text
-    color: #ffffff
+    color: #fff
 
     li
       font-size: 1.3em
 
     a
-      color: #ffffff
+      color: #fff
       text-decoration: none
       +mt(0.3s)
 
@@ -3078,7 +3078,7 @@ ul.sorting-pills li
           position: relative
 
           & + .label-text:before
-            color: #ffffff
+            color: #fff
             display: block
 
         .label-text:before
@@ -3170,7 +3170,7 @@ ul.sorting-pills li
   &-desc
     z-index: 2
     padding: 30px 0
-    color: #ffffff
+    color: #fff
     position: relative
 
     .star
@@ -3201,7 +3201,7 @@ ul.sorting-pills li
         display: inline-block
         margin-left: -1em
         margin-top: -1em
-        text-shadow: 0 0 2px #FFFFFF
+        text-shadow: 0 0 2px #fff
 
     .teacher
       display: flex
@@ -3247,7 +3247,7 @@ ul.sorting-pills li
 
         &:hover
           background-color: $active-color !important
-          color: #ffffff
+          color: #fff
 
 .seminar-modules
   padding-top: 40px
@@ -3472,7 +3472,7 @@ textarea.custom-textarea
     background-color: rgba(#000000, 0.8)
 
   .border-box
-    border: 2px solid #ffffff
+    border: 2px solid #fff
     border-radius: 20px
     text-align: center
     padding: 15px
@@ -3481,7 +3481,7 @@ textarea.custom-textarea
       font-family: $black-font
       text-align: center
       font-size: 2.7em
-      color: #ffffff
+      color: #fff
 
     .btn-transp
       font-size: 1em
@@ -3507,7 +3507,7 @@ textarea.custom-textarea
       width: 140px
       height: 140px
       background-color: $accent
-      color: #ffffff
+      color: #fff
       font-size: 4em
       font-weight: 900
       border-radius: 50%
