--- a/src/scss/_vars.sass
+++ b/src/scss/_vars.sass
@@ -14,7 +14,9 @@ $orang: #f18425
 $orange: #fecf73
 $active-color: #a3d3e5
 $info: #f4fdfd
-$lightgray: #acabab
+$textgray: #545454
+$lightgray: #ccc
+$headgray: #333
 $graybg: #f2f2f2
 $gray: #999999
 $lgray: rgb(204, 204, 204)
