--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -1,1 +1,8 @@
 //- Примеси
+
+mixin statistic
+  .article-prev__statistic
+    .text-muted
+      span.mr-1.article-prev__stat-item #[span.glyphicon.glyphicon-time] 5 минут
+      span.mr-1.article-prev__stat-item #[span.glyphicon.glyphicon-eye-open] 35
+      span.mr-1.article-prev__stat-item #[span.glyphicon.glyphicon-heart-empty] 14
