--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -4,6 +4,7 @@
 
 // Главный баннер
 .main-banner
+  margin-bottom: 70px
   &__slide
     padding-top: 41px
     padding-bottom: 65px
@@ -46,7 +47,7 @@
       font-size: 1.63em
       line-height: $hb
     &::before
-      +psblock(inline-block, absolute);
+      +psblock(block, absolute);
     &--people
       &::before
         +sprite($people)
@@ -73,6 +74,7 @@
     padding-bottom: 43px
     box-shadow: 0 0 7px rgba(102, 102, 102, 0.21)
     &-item
+      display: block
       $info-pd-left: 66px
       padding-left: $info-pd-left
       h4
@@ -106,13 +108,16 @@
 // карточки-превью статей
 .article-prev
   position: relative
-  margin-top: 70px
+  // margin-top: 70px
   &__img-wrap
+    box-sizing: border-box
     margin-bottom: 30px
+    height: 220px
+    overflow: hidden
     img
       width: 100%
       height: auto
-      display: cover
+      object-fit: cover
   &__tag
     display: block
     text-decoration: none
@@ -149,78 +154,197 @@
   &--main article-prev
     &__img-wrap
       position: absolute
+      height: 100%
       top: 0
       left: 0
 
+// Заголовки разделов
+.section-head
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  position: relative
+  margin-top: 70px
+  margin-bottom: 27px
+  width: 100%
+  &__line
+    position: absolute
+    top: 50%
+    left: $pad
+    margin: 0
+    padding: 0
+    z-index: -1
+    width: calc(100% - (2 * #{$pad}))
+    height: 1px
+    background-color: #545454
+  &__title
+    margin: 0
+    padding: 0 15px 0 0
+    display: inline-block
+    z-index: 10
+    background-color: #fff
+    +ff-arial-bold
+    font-size: 1.125em
+    line-height: 1.33em
+    color: $accent
+  &__all-articles-link
+    margin: 0
+    padding: 0 0 0 15px
+    display: inline-block
+    background-color: #fff
+    +ff-arial
+    font-size: 1em
+    line-height: 1.5em
+    color: $accent
+    &:hover
+      color: $accent
+
+
 // Анонс
 .announcement
+  padding-top: 30px
+  padding-bottom: 76px
   background-color: #f3efe3
+  $day-width: 95px
   &__title
+    margin-bottom: 46px
     +ff-arial-bold
     color: $accent
     font-size: 1.125em
     line-height: 1.33em
   &__item
+    display: flex
+    flex-direction: row
   &__date
-    +ff-arial-bold
+    display: flex
+    flex-direction: column
+    align-content: center
+    position: relative
     text-align: center
+    +ff-arial-bold
+    color: $accent
+    font-size: 1.125em
+    &:before
+      +psblock(block, absolute)
+      +sprite($calendar)
+      +leftcalc($calendar-width, $day-width)
+      z-index: 1
+      top: 0
+  &__day
+    padding-top: 9px
+    width: $day-width
+    z-index: 12
+    text-align: center
+    font-size: 1.33em
+  &__month
+    +ff-arial
+    text-align: center
+    width: $day-width
   &__text
     +ff-arial-bold
     color: $headgray
     font-size: 1em
     line-height: 1.5em
 
+// FAQ
+.faq
+  margin-top: 44px
+  &__section
+    margin-bottom: 21px
+  &__item
+    margin-bottom: 32px
+  &__tag
+    display: block
+    position: relative
+    +ff-arial-bold
+    font-size: 0.875em
+    color: $active-color
+    span
+      padding-left: 12px
+    &:hover
+      color: $active-color
 
+  &__quest
+    display: block
+    margin-top: 15px
+    margin-bottom: 4px
+    +ff-arial-bold
+    color: #000
+    font-size: 1.125em
+    line-height: 1.2em
+    &:hover
+      color: #000
 
-
-
-
+// Список разделов
+.section-list
+  margin-bottom: 64px
+  &__group
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+  &__item
+    display: flex
+    margin-top: 22px
+    margin-right: 30px
+    padding: 15px 40px
+    border: 2px solid $accent
+    border-radius: 25px
+    font-size: 1em
+    line-height: 1em
+    color: $accent
+    &:hover
+      color: $accent
+    &--2nd
+      border-color: $active-color
+      color: $active-color
+      &:hover
+        color: $active-color
 
 // .contacts-content
-//     margin-top: 80px
-//     .nav-tabs
-//         border-bottom: none
-//         margin-bottom: 40px
-//         li
-//             margin-right: 35px
-//             a
-//                 font-size: 20px
-//                 font-weight: 700
-//                 color: #999999
-//                 border-radius: 0
-//                 border: none
-//                 padding: 5px 0
-//                 &:hover
-//                     background-color: transparent
-//                     border: none
-//         li.active
-//             a
-//                 border: none
-//                 color: $accent
-//                 border-bottom: 2px solid $accent
-//     .box-border
-//         border-bottom: 1px solid #999
-//         margin-right: 50px
-//         padding-top: 30px
-//         padding-bottom: 20px
-//     .box-maps
-//         padding-top: 30px
-//     .box-requisites
-//         p
-//             padding-bottom: 20px
-//     .box-documents
-//         ul
-//             li
-//                 margin-bottom: 15px
-//                 padding-left: 15px
+//   margin-top: 80px
+//   .nav-tabs
+//     border-bottom: none
+//     margin-bottom: 40px
+//     li
+//       margin-right: 35px
+//       a
+//         font-size: 20px
+//         font-weight: 700
+//         color: #999999
+//         border-radius: 0
+//         border: none
+//         padding: 5px 0
+//         &:hover
+//           background-color: transparent
+//           border: none
+//     li.active
+//       a
+//         border: none
+//         color: $accent
+//         border-bottom: 2px solid $accent
+//   .box-border
+//     border-bottom: 1px solid #999
+//     margin-right: 50px
+//     padding-top: 30px
+//     padding-bottom: 20px
+//   .box-maps
+//     padding-top: 30px
+//   .box-requisites
+//     p
+//       padding-bottom: 20px
+//   .box-documents
+//     ul
+//       li
+//         margin-bottom: 15px
+//         padding-left: 15px
 
 
 // .contacts-footer
-//     margin-top: 150px
-//     p
-//         padding-bottom: 20px
-//         line-height: 30px
-//         margin: 0
+//   margin-top: 150px
+//   p
+//     padding-bottom: 20px
+//     line-height: 30px
+//     margin: 0
 
 // .filter-tab
 // 	margin-top: 80px
@@ -277,11 +401,11 @@
 
 
 // .contacts-footer
-//     margin-top: 150px
-//     p
-//         padding-bottom: 20px
-//         line-height: 30px
-//         margin: 0
+//   margin-top: 150px
+//   p
+//     padding-bottom: 20px
+//     line-height: 30px
+//     margin: 0
 
 // .box-programm
 // 	box-shadow: 0 3px 5px rgba(#000000, 0.1)
@@ -448,12 +572,12 @@
 // 	&:hover
 // 		border: 1px solid $accent
 // 		.box-programm_button
-//             z-index: 11
-//             opacity: 1
-//             box-shadow: 0 3px 5px rgba(#000000, 0.1)
-//             border-left: 1px solid $accent
-//             border-right: 1px solid $accent
-//             border-bottom: 1px solid $accent
+//       z-index: 11
+//       opacity: 1
+//       box-shadow: 0 3px 5px rgba(#000000, 0.1)
+//       border-left: 1px solid $accent
+//       border-right: 1px solid $accent
+//       border-bottom: 1px solid $accent
 
 // .box-privileges
 // 	position: relative
